actualización pre merge 1
Creación de menú de navegación y demás contenido, hasta "Mis proyectos"

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="home" class="active">Inicio</a>
             <a href="#about">Acerca de mí</a>
             <a href="#serv">Servicios</a>
-            <a href="#portf">Mis proyectos</a>
+            <a href="#portf">Portafolio</a>
             <a href="#contact">Contáctame</a>
         </nav>
     </header>
@@ -34,22 +34,89 @@
     <!-- diseño de #home -->
     <section class="home" id="home">
         <div class="home-cont">
-            <h3>¡Hola! soy</h3>
+            <h3>¡Hola! Soy</h3>
             <h1>Justin Romero</h1>
-            <h3>Y soy un <span> Desarrollador Front-end</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia 
+            <h3>y soy un<span> Desarrollador Front-end</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia
                 aspernatur quam hic nulla qui quae eius.</p>
-                <div class="media">
-                    <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="#"><i class='bx bxl-github'></i></a>
-                    <a href="#"><i class='bx bxl-youtube' ></i></a>
-                    <a href="#"><i class='bx bxl-facebook-square'></i></a>
-                    <a href="#"><i class='bx bxl-twitter'></i></a>
-                    <a href="#"><i class='bx bxl-instagram'></i></a>
-                </div>
+
+            <!-- Div que contendrá el menú de navegación -->
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-youtube'></i></a>
+                <a href="#"><i class='bx bxl-facebook-square'></i></a>
+                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="#"><i class='bx bxl-instagram'></i></a>
+
+                <!-- Botón de descarga de mi CV -->
+            </div>
+            <a href="#" class="btn">Descarga mi CV</a>
+        </div>
+
+        <!-- img para el área "Home" -->
+        <div class="home-img">
+            <img src="images/back.png">
         </div>
     </section>
 
+    <!-- Diseño/img para el área "About" -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="images/noback3.png" alt="">
+        </div>
+
+        <div class="abt-cont">
+            <h2 class="hdng">Acerca <span>de mí</span></h2>
+            <h3>Front-end Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Pariatur facilis, sit aperiam quis placeat ipsa iusto
+                quia molestiae, eligendi quod consequuntur tenetur ab
+                repellendus sunt quas odit labore, velit perspiciatis
+                nihil ut maiores sint laborum aliquam nostrum! Cumque,
+                quae! Sunt numquam sapiente aspernatur, eum dignissimos
+                assumenda!</p>
+            <a href="#" class="btn">Leer más</a>
+
+        </div>
+    </section>
+
+    <!-- Diseño/img para el área "Servicios" -->
+    <section class="servicios" id="servicios">
+        <h2 class="hdng">Mis <span>servicios</span></h2>
+
+        <div class="serv-cont">
+            <div class="serv-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Desarrollo Web</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Iure beatae voluptas rerum aliquid debitis explicabo,
+                    illum ullam delectus obcaecati nam.</p>
+                <a class="btn">Leer más</a>
+            </div>
+
+            <div class="serv-box">
+                <i class='bx bx-support'></i>
+                <h3>IT Support</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Iure beatae voluptas rerum aliquid debitis explicabo,
+                    illum ullam delectus obcaecati nam.</p>
+                <a class="btn">Leer más</a>
+            </div>
+
+        </div>
+    </section>
+
+    <!-- Diseño/img para el área "Mis proyectos" -->
+    <section class="portafolio" id="portafolio">
+        <h2 class="hdng">Últimos <span>proyectos</span></h2>
+
+        <div class="port-cont">
+            <div class="port-box">
+
+            </div>
+        </div>
+    </section>
     <!-- Script utilizado para  -->
     <script src="./js/script.js"></script>
 </body>
