actualización pre merge 2
Creación de menú de navegación y demás contenido, hasta "Mis proyectos", finalizado Falta "contáctanos"

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
     <!-- Diseño para header -->
     <header class="header">
-        <a href="#" class="logo">Portafolio</a>
+        <a href="#home" class="logo">Portafolio</a>
 
         <i class='bx bx-menu' id="icono"></i>
 
         <nav class="navbar">
-            <a href="home" class="active">Inicio</a>
+            <a href="#home" class="active">Inicio</a>
             <a href="#about">Acerca de mí</a>
-            <a href="#serv">Servicios</a>
-            <a href="#portf">Portafolio</a>
+            <a href="#servicios">Servicios</a>
+            <a href="#portafolio">Portafolio</a>
             <a href="#contact">Contáctame</a>
         </nav>
     </header>
@@ -111,10 +111,74 @@
     <section class="portafolio" id="portafolio">
         <h2 class="hdng">Últimos <span>proyectos</span></h2>
 
+        <!-- API clima -->
         <div class="port-cont">
             <div class="port-box">
-
+                <img src="/images/api-clima.png" alt="">
+                <div class="port-layer">
+                    <h4>API | Monitoreo de clima</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Necessitatibus, omnis.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
             </div>
+
+            <!-- API Pelis -->
+            <div class="port-box">
+                <img src="/images/api-pelis.png" alt="">
+                <div class="port-layer">
+                    <h4>API | Películas y series</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Necessitatibus, omnis.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <!-- Clon de WhatsApp -->
+            <div class="port-box">
+                <img src="/images/api-wha.png" alt="">
+                <div class="port-layer">
+                    <h4>API | WhatsApp clone</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Necessitatibus, omnis.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <!-- Sitio web de la empresa Aluvicloset S.A de C.V. -->
+            <div class="port-box">
+                <img src="/images/aluvi.jpg" alt="">
+                <div class="port-layer">
+                    <h4>Sitio web de empresa</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Necessitatibus, omnis.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <!-- Clon de Instagram  -->
+            <div class="port-box">
+                <img src="/images/ig-api.jpg" alt="">
+                <div class="port-layer">
+                    <h4>API | Instagram Clone</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Necessitatibus, omnis.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <!-- Clon de Twitter  -->
+            <div class="port-box">
+                <img src="/images/tw-api.png" alt="">
+                <div class="port-layer">
+                    <h4>API | Twitter Clone</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Necessitatibus, omnis.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+
         </div>
     </section>
     <!-- Script utilizado para  -->
