actualización pre merge 3
se agregó js para el navbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#about">Acerca de mí</a>
             <a href="#servicios">Servicios</a>
             <a href="#portafolio">Portafolio</a>
-            <a href="#contact">Contáctame</a>
+            <a href="#contacto">Contáctame</a>
         </nav>
     </header>
 
@@ -177,12 +177,39 @@
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-
-
         </div>
     </section>
-    <!-- Script utilizado para  -->
-    <script src="./js/script.js"></script>
+
+    <!-- Diseño/img para el área "Contáctame" -->
+    <section class="contacto" id="contacto">
+        <h2 class="hdng">¿Tienes dudas? <span>¡Contáctame!</span></h2>
+
+        <form action="#">
+            <div class="info-box">
+                <input type="text" placeholder="Nombre completo">
+                <input type="email" placeholder="Correo electrónico">
+            </div>
+            <div class="info-box">
+                <input type="number" placeholder="Teléfono/Celular">
+                <input type="text" placeholder="Asunto">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Escribe tu mensaje"></textarea>
+            <input type="submit" value="Enviar mensaje" class="btn">
+        </form>
+    </section>
+
+    <!-- Diseño del footer -->
+    <footer class="footer">
+        <div class="f-txt">
+            <p>Copyright &copy; 2023 por DjarinKode | Todos los derechos reservados.</p>
+        </div>
+
+        <div class="icon-t">
+            <a href="#home"><i class='bx bxs-chevrons-up'></i></a>
+        </div>
+    </footer>
+    <!-- Script utilizado para navegación en navbar -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
