--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Diseño para header -->
     <header class="header">
-        <a href="#home" class="logo">Portafolio</a>
+        <a href="#home" class="logo"> jarvKodes</a>
 
         <i class='bx bx-menu' id="icono"></i>
 
@@ -36,7 +36,7 @@
         <div class="home-cont">
             <h3>¡Hola! Soy</h3>
             <h1>Justin Romero</h1>
-            <h3>y soy un<span> Desarrollador Front-end</span></h3>
+            <h3>y soy un <span class="txt-multi"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quia
                 aspernatur quam hic nulla qui quae eius.</p>
 
@@ -56,14 +56,13 @@
 
         <!-- img para el área "Home" -->
         <div class="home-img">
-            <img src="images/back.png">
-        </div>
+            <img src="images/jarvKodes.png">
     </section>
 
     <!-- Diseño/img para el área "About" -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/noback3.png" alt="">
+            <img src="images/jarvKodes2.png">
         </div>
 
         <div class="abt-cont">
@@ -201,15 +200,23 @@
     <!-- Diseño del footer -->
     <footer class="footer">
         <div class="f-txt">
-            <p>Copyright &copy; 2023 por DjarinKode | Todos los derechos reservados.</p>
+            <p>Copyright &copy; 2023 por jarvKodes | Todos los derechos reservados.</p>
         </div>
 
         <div class="icon-t">
             <a href="#home"><i class='bx bxs-chevrons-up'></i></a>
         </div>
     </footer>
+
+    <!-- Scroll reaveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- typed js (animación de texto de h3 en home-cont)-->
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+
     <!-- Script utilizado para navegación en navbar -->
     <script src="js/script.js"></script>
+
 </body>
 
 </html>
