--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="#"><i class='bx bxl-youtube'></i></a>
                 <a href="#"><i class='bx bxl-facebook-square'></i></a>
                 <a href="#"><i class='bx bxl-twitter'></i></a>
-                <a href="#"><i class='bx bxl-instagram'></i></a>
+                <a href="https://instagram.com/jarvkodes?igshid=OGRjNzg3M2Y="><i class='bx bxl-instagram'></i></a>
 
                 <!-- Botón de descarga de mi CV -->
             </div>
