--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
             <!-- Div que contendrá el menú de navegación -->
             <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
-                <a href="#"><i class='bx bxl-youtube'></i></a>
-                <a href="#"><i class='bx bxl-facebook-square'></i></a>
-                <a href="#"><i class='bx bxl-twitter'></i></a>
+                <a href="https://www.linkedin.com/in/shastin245/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/jarvKodes"><i class='bx bxl-github'></i></a>
+                <a href="https://www.youtube.com/channel/UCk4X7hd0kEeXz81mk8lNlPw"><i class='bx bxl-youtube'></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100092261407237&mibextid=ZbWKwL"><i class='bx bxl-facebook-square'></i></a>
+                <a href="https://twitter.com/jarvKodes"><i class='bx bxl-twitter'></i></a>
                 <a href="https://instagram.com/jarvkodes?igshid=OGRjNzg3M2Y="><i class='bx bxl-instagram'></i></a>
 
                 <!-- Botón de descarga de mi CV -->
