--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section class="contacto" id="contacto">
         <h2 class="hdng">¿Tienes dudas? <span>¡Contáctame!</span></h2>
 
-        <form action="#">
+        <form action="https://formsubmit.co/djarinkodes@gmail.com" method="POST">
             <div class="info-box">
                 <input type="text" placeholder="Nombre completo">
                 <input type="email" placeholder="Correo electrónico">
