--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     <section class="contacto" id="contacto">
         <h2 class="hdng">¿Tienes dudas? <span>¡Contáctame!</span></h2>
 
-        <form name="contact" netlify>
+        <form action="mailto:djarinkodes@gmail.com" method="post" enctype="text/plain">
             <div class="info-box">
                 <input type="text" placeholder="Nombre completo">
                 <input type="email" placeholder="Correo electrónico">
